--- a/guild-manager-server/package.json
+++ b/guild-manager-server/package.json
@@ -22,9 +22,16 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/swagger": "^3.1.0",
+    "@nestjs/typeorm": "^6.1.3",
+    "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "swagger": "^0.7.5",
+    "swagger-ui-express": "^4.0.7",
+    "typeorm": "^0.2.18",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
