--- a/guild-manager-server/package.json
+++ b/guild-manager-server/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
+    "btoa": "^1.2.1",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
