--- a/guild-manager-server/package.json
+++ b/guild-manager-server/package.json
@@ -25,6 +25,8 @@
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
     "btoa": "^1.2.1",
+    "class-transformer": "^0.2.3",
+    "cookie-parser": "^1.4.4",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
